fix overflow

--- a/packages/commonwealth/client/styles/components/rules/rule_modal.scss
+++ b/packages/commonwealth/client/styles/components/rules/rule_modal.scss
@@ -3,20 +3,23 @@
   align-items: center;
   min-width: 540px;
   overflow-y: auto;
+  max-height: 80vh;
+  min-height: 40vh;
+  justify-content: space-between;
   padding: 0;
   border: 2px solid #e6e5e7;
 
-  .child-modal {
+  &.child-modal {
     min-width: 100%;
     height: 100%;
     min-width: none;
     box-shadow: none;
+    max-height: none;
   }
 
   .top-section {
     padding: 16px;
     width: 100%;
-    min-height: 300px;
 
     .title-section {
       display: flex;
